[package]
name = "serde_json_string_parse"
version = "0.1.1"
authors = ["DevNul <devnulpavel@gmail.com>"]
edition = "2021"
categories = ["encoding"]
keywords = ["trait", "string", "serde", "json"]
license = "Apache-2.0 OR MIT"
readme = "README.md"
repository = "https://github.com/DevNulPavel/serde_json_string_parse"
documentation = "https://docs.rs/crate/serde_json_string_parse/"
description = "Parse string trait as json returning original string in case of error"

[dependencies]
serde = "1"
serde_json = "1"

[dev-dependencies]
serde = {version="1", features=["derive"]}
